# qtact

./: .gitignore  Cargo.toml  LICENSE  README.md  osprey_search_ARCHITECTURE.md
qdrant_storage/: raft_state.json
src/: main.rs
src/data_model/: vector.rs
src/qdrant/: client.rs  mod.rs
src/routes/: index.rs  mod.rs  vector.rs
src/routes/vector/: create_vector.rs  delete_vector.rs  filter_vector.rs  get_vector.rs  match_vector.rs  mod.rs  similar_vector.rs  update_vector.rs
