[package]
name = "qtact"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
env_logger = "0.11.6"
qdrant-client = { version = "1.13.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["full"] }
